Tabs.css
.flex-container {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: flex-start;
  align-items: stretch;
  position: fixed;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

/* Tabs.css */

.tab-header-container {
  position: relative; /* makes it work */
  margin-top: 0;
  height: auto;
  width: 100%;
  z-index: 1;
  align-items: center;
  justify-content: center;
}

.tab-header-content {
  /* specific to my layout, mileage may vary */
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.tab-content-fixed-bottom {
  /* this is your tab content, mileage may vary */
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow-y: scroll;
  align-self: flex-end;
}

.sticky-tab-container {
  width: 100%;
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  padding-top: 15px;
}

.sticky-tab-container div > div {
  height: 40px;
  width: 100%;
  vertical-align: middle;
  text-align: center;
}

.sticky-tab-container div > a {
  /* style your tab links here */
}

.tab-item > .tab-item-active > a {
  /* style your active tab link here */
}

.collapsed-tabs {
  /* styles for tabs when collapsed
     I added a little drop shadow animation */
  box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.25) !important;
  transition: box-shadow 1s;
}

